--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -1,10 +1,15 @@
 ---
 title: Syllabus
 toc: true
+toc-location: right
+execute:
+  echo: false
+  warning: false
+  message: false
 ---
 
-```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
-source(here::here("R", "settings.R"))
+```{r}
+source("_common.R")
 ```
 
 # Course Information
@@ -12,28 +17,14 @@ source(here::here("R", "settings.R"))
 <div style="width:600px">
 Instructor | Course
 ---|---
-<i class="fas fa-user"></i> John Paul Helveston | <i class="far fa-calendar"></i> {{< var weekday >}}
-<i class="fas fa-university"></i> Science & Engineering Hall, 2830 | <i class="fa fa-map-marker-alt"></i> [{{< var room >}}]({{< var room_url >}})
-<i class="fas fa-phone"></i> +1 (202) 994-7173 | <i class="far fa-calendar-alt"></i> {{< var dates >}}
-<i class="fas fa-envelope"></i> [jpg@gwu.edu](mailto:jph@gwu.edu) | <i class="far fa-clock"></i> {{< var time >}}
-<i class="fab fa-twitter"></i> [\@JohnHelveston](https://twitter.com/JohnHelveston) | <i class="fab fa-slack"></i> [Slack]({{< var slack >}}){target="_blank"}
+<i class="bi-person-fill"></i> John Paul Helveston | <i class="bi-calendar-fill"></i> {{< var weekday >}}
+<i class="bi-building-fill"></i> Science & Engineering Hall, 2830 | <i class="bi-geo-alt-fill"></i> [{{< var room >}}]({{< var room_url >}})
+<i class="bi-telephone-fill"></i> +1 (202) 994-7173 | <i class="bi-calendar-week-fill"></i> {{< var dates >}}
+<i class="bi-envelope-fill"></i> [{{< var email >}}](mailto:{{< var email >}}) | <i class="bi-clock-fill"></i> {{< var time >}}
+<i class="bi-twitter"></i> [\@JohnHelveston](https://twitter.com/JohnHelveston) | <i class="bi-slack"></i> [Slack]({{< var slack >}}){target="_blank"}
 </div>
 
-# COVID-19 Precautions
-
-Please help us all stay safe so we can continue having in-person classes. Please wear a mask in class, and wash your hands often. If you're sick, stay home and send me a message, we'll work it out. Let's work together on this folks.
-
-# Remote attendance / class recording
-
-You should plan to attend class in person. I will only open a zoom for virtual attendance on an individual case-by-case basis for specific excusable absences (e.g. illness, family matters, etc.). Lectures will **not** be recorded. In-person attendance is critical as we will spend a lot of time working on problems and writing code during class. If you have any questions or need special accommodations, send me a message on slack and we can discuss.
-
-# Course Description
-
-## GW Bulletin Description (short)
-
-Analyzing data to inform design decisions in an uncertain, competitive, market, topics include consumer choice modeling, programming in [R](https://www.r-project.org/), survey design, conjoint analysis, optimization market simulation, and professional communication skills. 
-
-## Longer Description
+## Course Description
 
 ```{r child = here::here("fragments", "description.qmd")}
 ```
@@ -48,15 +39,10 @@ Analyzing data to inform design decisions in an uncertain, competitive, market, 
 ```{r child = here::here("fragments", "learning-objectives.qmd")}
 ```
 
-# Pep Talk!
+## Pep Talk!
 
-Working in and learning a programming language can be as challenging as learning a new spoken language. Hadley Wickham (chief data scientist at RStudio and author of many amazing R packages you'll be using) [made this wise observation](https://r-posts.com/advice-to-young-and-old-programmers-a-conversation-with-hadley-wickham/):
-
-> It's easy when you start out programming to get really frustrated and think, "Oh it's me, I'm really stupid," or, "I'm not made out to program." But, that is absolutely not the case. Everyone gets frustrated. I still get frustrated occasionally when writing R code. It's just a natural part of programming. So, it happens to everyone and gets less and less over time. Don't blame yourself. Just take a break, do something fun, and then come back and try again later.
-
-If you're finding yourself taking way too long hitting your head against a wall and not understanding, **take a break**, talk to classmates, ask questions in Slack, and try it again later.
-
-**I promise, you can do this**
+```{r child = here::here("fragments", "pep-talk.qmd")}
+```
 
 # Required Texts & Materials
 
@@ -64,7 +50,7 @@ All texts and software for this course is freely available on the web. This incl
 
 ## Software
 
-Go to the [Course Software](help/course-software.qmd) page for detailed instructions on how to install the software we'll be using. Here's a quick list:
+Go to the Course [Software page](software.qmd) for detailed instructions on how to install the software we'll be using. Here's a quick list:
 
 - R (version 4.1.0 or later), which can be downloaded from [The Comprehensive R Archive Network (CRAN)](https://cloud.r-project.org)
 - RStudio (Desktop Version), a free IDE for R, which can be downloaded from [RStudio](https://rstudio.com/products/rstudio/download/)
@@ -72,19 +58,25 @@ Go to the [Course Software](help/course-software.qmd) page for detailed instruct
 
 # Assignments
 
-## Class Participation
+## Participation & Attendance
 
-Regular class attendance is **essential**. Much of the class time will be spent doing exercises and working with your team on your project. Multiple unexcused absences, inappropriate or unprofessional behavior during class (such as monopolizing discussions or being rude or disruptive), not participating in classroom exercises, and not being prepared for class will result in poor performance in this class.
+**Attendance will be taken** and will be part of your participation grade.
+
+In-person attendance is critical as we will spend a lot of time working on problems and writing code during class. You should plan to attend class in person each week. 
+
+**There will be no option for remote attendance (e.g. zoom)**, and class sessions will not be recorded. If you have any questions or need special accommodations, send me a message on slack and we can discuss. If you must miss class for an excused absence (e.g. medical issue), please message Professor Helveston and get notes from your fellows classmates.
+
+Multiple absences, inappropriate or unprofessional behavior during class (such as monopolizing discussions or being rude or disruptive), not participating in classroom exercises, and not being prepared for class will result in a poor score for attendance and participation.
 
 ## Quizzes
 
-There will be 5 quizzes given about once every other week immediately at the beginning of class. You will not be told in advance when there is a quiz, and make up quizzes will not be available if you miss it (except for excused absences). Please show up on time to class each week to ensure that you do not miss a quiz.
+Quizzes will be given about once every other week immediately at the beginning of class (check the [schedule](schedule.html)). Make up quizzes will not be available if you miss it (except for excused absences). Please show up on time to class each week to ensure that you do not miss a quiz. Quizzes will cover material presented in previous classes and assignments during the weeks since the most-recent quiz.
 
-Quizzes will cover material presented in previous classes and assignments during the weeks since the most-recent quiz. Quizzes are **short** (5-10 minutes) and are designed to test for fluency and to demonstrate where additional study is needed. **Quizzes are low-stakes** - your worst one is dropped, and the rest count for a small portion of your final grade. If you do poorly on one or two, use that as feedback on where you need additional improvement.
+Quizzes are **short** (10 minutes) and are designed to test for fluency and to demonstrate where additional study is needed. **Quizzes are low-stakes** - your worst one is dropped, and the rest count for a small portion of your final grade. If you do poorly on one or two, use that as feedback on where you need additional improvement.
 
 > **Why quiz at all?** Research shows that giving small quizzes throughout a class can dramatically help with *retention*. It's a phenomenon known as the "retrieval effect" - basically, you have to _practice_ remembering things, otherwise your brain won't remember them. The phenomenon and research on it is explained in detail in the book ["Make It Stick: The Science of Successful Learning,"](https://www.hup.harvard.edu/catalog.php?isbn=9780674729018) by Brown, Roediger, and McDaniel.
 
-## Assignments
+## Homework
 
 Each week, students will be assigned readings and exercises to prepare for the next class period. Students will need to submit reflections on these readings each week, which may involve answering some practice questions.
 These are graded using a check system:
@@ -110,6 +102,7 @@ The final exam is a take-home exam, and we will spend a portion of the last day 
 Final grades will be calculated as follows:
 
 <div style="width:550px">
+
 Item                  | Weight | Notes
 ----------------------|--------|-------------------------------------
 Reflections           | 30 %   | Weekly assignment (10 x 3%, lowest dropped)
@@ -122,11 +115,16 @@ Final Survey          | 5 %    |
 Final Analysis Report | 14 %   |
 Final Presentation    | 8 %    |
 Final Exam            | 10 %   | Take home exam
+
 </div>
 
 Here's a visual breakdown by category:
 
-```{r grade-breakdown, echo=FALSE, fig.height=3, fig.align='left'}
+```{r}
+#| label: grade-breakdown
+#| fig.height: 3
+#| fig.align: left
+
 library(viridis)
 library(ggrepel)
 
@@ -186,13 +184,13 @@ All course communication will be managed through [Slack]({{< var slack >}}){targ
 - Ask for help with an assignment.
 - Send direct, private messages to each other or the instructors (just like email...but better!)
 
-**Asking for help on Slack**:
+> **Asking for help on Slack**: You can post questions on slack and receive quick responses. This also enables other students to see answers to common questions. Be specific - if your code has an error you don't understand, **include the code and the error message** in your question.
 
-You can post questions on slack and receive quick responses. This also enables other students to see answers to common questions. Be specific - if your code has an error you don't understand, **include the code and the error message** in your question.
+## AMA Hours
 
-## Office hours
+I will hold regular "Ask Me Anything" hours each week. The specific hours will be posted on the course slack. During this period, you can come to my office (SEH 2830) and ask me anything. And I mean anything. Most of the time you may just have a question related to class, but I am also happy to discuss anything else with you regarding life, important decisions, career, art, music, dance, etc.
 
-Scheduling a time to answer questions is hard, so rather than hold regular office hours, you can use [this link](https://jhelvy.appointlet.com/b/professor-helveston) to schedule a zoom call with me most days of the week.
+If the AMA hours don't work with your schedule, you can always schedule a zoom call with me using [this link](https://jhelvy.appointlet.com/b/professor-helveston). I'm available most days of the week.
 
 ## Tutoring hours
 
@@ -206,22 +204,27 @@ While the University Library is not a stand in for TAs, you can schedule a consu
 
 ## tl;dr
 
-- **BE NICE. BE HONEST. DON'T CHEAT.**
-- You get **5** late days - use them however you want, but you can't use more than **2** late days on any one assignment.
-- If you're not sure about something, talk with me and we'll figure it out.
+- BE NICE
+- BE ON TIME
+- BE HONEST
+- DON'T CHEAT
+- SERIOUSLY: DON'T CHEAT
 
 ## Late Policy
 
-Each students is allowed **5** late homework submission days - use them however you want, no questions asked. **No more than 2 days can be applied toward a single assignment**. Late days are meant to cover illness, family emergencies, and religious holidays. Assignments submitted more than 2 days after the due date will not be graded. In extreme circumstances, contact the instructor.
+Each students is allowed **3** late homework submission days - use them however you want, no questions asked. These are meant to cover illness, family emergencies, and religious holidays.
+
+Beyond those, assignments are due by 11:59pm on the assigned due date unless specified otherwise. Assignments submitted up to 24 hours past this deadline will be graded to a max of 50% of the available points. Assignments submitted beyond 24 hours past the deadline will not be graded and will be assigned a 0.
+
+If you need a special accommodation such as due to an illness, family emergency, or religious holidays, contact the instructor ahead of time.
 
 ## Cheating
 
 Cheating results in a penalty on the first offense, and failing the course on the second offense. Cheating on assignments can include:
 
 - Copying or stealing any amount of code from someone currently in the class or someone who has taken the class before.
-- NOTE: Copying is never okay, whether the code is provided electronically, visually, audibly, or on paper.
+- NOTE: Copying is never okay, whether the code is provided electronically, visually, audibly, or on paper. Even if you work together on an assignment, **write your own code**.
 - Providing code you have written for an assignment to anyone else in the class.
-- Finding code online and using it in the assignment. One exception: you may use code from the course website.
 - Putting code solutions from the course assignments online.
 - Receiving code-level assistance from any person not associated with the course.
 - Getting someone else to write the assignment code for you.
@@ -233,6 +236,14 @@ Cheating on quizzes, assignments, or the final project can include:
 - Copying part of an answer off of another student's paper, even if it is very small.
 - Using solutions provided by students who previously took the course.
 
+### Use of chatGPT and other AI tools
+
+Large language models (LLMs) are capable of producing exact solutions to some of the coding problems assigned in this class. So we all basically have a solutions manual available for free.
+
+With this in mind, the use of AI tools is in general permitted, but with caveats. If you do use AI tools on assignments in this class, you must include the prompt(s) you used as well as changed to made to them to get better results to receive full credit.
+
+Learn to use tools like ChatGPT as a learning assistant - a tool to help you accomplish the task - rather than just a solutions manual. One version of using it makes you a better and more efficient coder, the other robs you of that.
+
 ### Penalties
 
 Violations will be reported to the [Office of Student Rights & Responsibilities](https://studentconduct.gwu.edu/charging-academic-integrity-violations). Penalties are decided by the course instructors, and can vary based on the severity of the offense. Possible penalties include:
@@ -243,94 +254,33 @@ Violations will be reported to the [Office of Student Rights & Responsibilities]
 
 Depending on the student's prior academic history, violations may also be accompanied by a letter to the Dean of Student Affairs, again at the instructors' discretion. This can lead to university-level penalties, such as being suspended or expelled.
 
-## Children in class
+### Grace Period
 
-<!-- Policy copied from Andrew Heiss's class -->
-<!-- https://evalsp20.classes.andrewheiss.com/syllabus/ -->
+College is a time when you do a lot of learning. Sometimes, you might make bad decisions or mistakes. The most important thing for you to do is to learn from your mistakes, to constantly grow, and become a better person.
 
-I applaud all of you who attend school with children! It is difficult to balance academic, work, and family commitments, and I want you to succeed. Here are my policies regarding children in class:
+Sometimes, students panic and copy code right before the deadline, then regret what they did afterwards. Therefore, you may rescind any homework submission for up to 24 hours after the deadline with no questions asked. Simply email the course instructors asking to delete the submission in question, and we will do so. Deleted submissions will not be considered during plagiarism detection, though of course they will also not be graded. However, it will always be better to get a 0 (or partial credit) on an assignment than to get a cheating violation!
 
-1. All breastfeeding babies are welcome in class as often as necessary.
-2. Non-nursing babies and older children are welcome whenever alternate arrangements cannot be made. As a parent of young children, I understand that babysitters fall through, partners have conflicting schedules, children get sick, and other issues arise that leave parents with few other options.
-3. In cases where children come to class, I invite parents/caregivers to sit close to the door so as to more easily excuse yourself to attend to your child's needs. Non-parents in the class: please reserve seats near the door for your parenting classmates.
-4. All students are expected to join with me in creating a welcoming environment that is respectful of your classmates who bring children to class.
-
-I understand that sleep deprivation and exhaustion are among the most difficult aspects of parenting young children. The struggle of balancing school, work, childcare, and graduate school is tiring, and I will do my best to accommodate any such issues while maintaining the same high expectations for all students enrolled in the class. Please do not hesitate to contact me with any questions or concerns.
-
-## Lauren's Promise
-
-<!-- Policy copied from Andrew Heiss's class -->
-<!-- https://evalsp20.classes.andrewheiss.com/syllabus/ -->
-
-**I will listen and believe you if someone is threatening you.**
-
-Lauren McCluskey, a 21-year-old honors student athlete, [was murdered on October 22, 2018 by a man she briefly dated on the University of Utah campus](https://www.sltrib.com/opinion/commentary/2019/02/10/commentary-failing-lauren/). We must all take action to ensure that this never happens again.
-
-If you are in immediate danger, call 911 or GWU police at 202-994-6111 (GWPD).
-
-If you are experiencing sexual assault, domestic violence, or stalking, if you report it to me I will listen and connect you to resources or call GWU's [Counseling and Psychological Services](https://healthcenter.gwu.edu/counseling-and-psychological-services) (202-994-5300).
-
-Any form of sexual harassment or violence will not be excused or tolerated at GWU. GWU has instituted procedures to respond to violations of these laws and standards, programs aimed at the prevention of such conduct, and intervention on behalf of the victims. GWU Police officers will treat victims of sexual assault, domestic violence, and stalking with respect and dignity. Advocates on campus and in the community can help with victims' physical and emotional health, reporting options, and academic concerns.
-
-## Use of Course Materials
-
-All course materials available on the course website are developed open source - you are welcome to post and share them following the licensing guidelines listed in the [license](LICENSE.qmd) page.
-
-However, all **solutions** to assignments and quizzes are proprietary. Don't post them online or try to sell them - this is a violation of the [student code of conduct](https://studentconduct.gwu.edu/code-student-conduct).
-
-## What To Do if the Instructor Does Not Arrive
-
-Wait **20 minutes**, after that you're free to leave. One member of the class should be selected to notify the EMSE Department of the Instructor's absence by calling the EMSE Department 202-994-4892 on next business day.
-
-# University Policies
-
-## University Policy on Religious Holidays
-
-In accordance with University Policy, students should notify faculty during the first week of the semester of their intention to be absent from class on their day(s) of religious observance. Official university policy here: https://students.gwu.edu/accommodations-religious-holidays
-
-- Students should notify faculty during the first week of the semester of their intention to be absent from class on their day(s) of religious observance.
-- Faculty should extend to these students the courtesy of absence without penalty on such occasions, including permission to make up examinations.
-- Faculty who intend to observe a religious holiday should arrange at the beginning of the semester to reschedule missed classes or to make other provisions for their course-related activities.
-
-## Support for Students Outside the Classroom
-
-**Disability Support Services (DSS)**:
-Any student who may need an accommodation based on the potential impact of a disability should contact the Disability Support Services office at 202-994-8250 in the Rome Hall, Suite 102, to establish eligibility and to coordinate reasonable accommodations. For additional information please refer to: https://disabilitysupport.gwu.edu/
-
-**Mental Health Services (202-994-5300)**:
-The University's Mental Health Services offers 24/7 assistance and referral to address students' personal, social, career, and study skills problems. Services for students include: crisis and emergency mental health consultations confidential assessment, counseling services (individual and small group), and referrals. https://healthcenter.gwu.edu/counseling-and-psychological-services
-
-## Academic Integrity Code
-
-Academic dishonesty is defined as cheating of any kind, including misrepresenting one's own work, taking credit for the work of others without crediting them and without appropriate authorization, and the fabrication of information. For the remainder of the code, see: https://studentconduct.gwu.edu/code-academic-integrity
-
-In addition to the formal code of academic integrity, the instructor expects that students will treat this course with the level of professionalism required in the workplace. Remember that real firms are sponsoring student projects throughout the semester; in a workplace setting, these firms would be paying clients for the analyses being conducted. This course prepares students to succeed in the workplace, and maintaining a high degree of professionalism is expected.
+```{r child = here::here("fragments", "other-policies.qmd")}
+```
 
 # Super Heros
 
-<div class = "row">
+::: {.grid}
 
-<div class = "col-md-4">
-<img src="images/prof_x.gif">
-</div>
+::: {.g-col-4}
 
-<div class = "col-md-8">
+<img src="images/prof_x.gif" width=100%>
 
-Once you have read this entire syllabus and viewed the [course schedule](schedule.qmd), please send me a picture of your favorite super hero in a direct message on Slack.
+:::
+
+::: {.g-col-8}
+
+Once you have read this entire syllabus and viewed the [course schedule](schedule.qmd), please send me a picture of _cute_ picture of your favorite animal in a direct message on Slack.
 
 For real.
 
 Brownie points if it's animated.
 
-</div>
-</div>
+:::
 
----
-
-**Page sources**:
-
-Some content on this page is inspired by and / or modified from other sources:
-
-- The "Pep Talk" and "Super Heros" sections are inspired by Andrew Heiss's course [Program Evaluation For Public Service](https://evalf19.classes.andrewheiss.com/syllabus/)
-- The cheating policy is modified from the course [15-112](http://www.kosbie.net/cmu/fall-19/15-112/) at Carnegie Mellon University
-
+:::
