--- a/hw/3-intro-to-formr.qmd
+++ b/hw/3-intro-to-formr.qmd
@@ -5,4 +5,49 @@ params:
   purpose: 'The purpose of this assignment is to get familiar with the [formr.org](https://formr.org/) survey platform, which we will be using to implement our surveys.'
 ---
 
-Coming soon!
+```{r child = here::here("fragments", "hw.qmd")}
+```
+
+### 1. Getting Organized
+
+Download and edit [this template](`r url_template`) when working through this assignment. This is for now mostly a blank file that you can use to jot down examples and play with code.
+
+Notice that this week's template is a `.qmd` file, which is called a "Quarto Markdown" file (or just "Quarto" file). You'll learn about what these files are and how they are different from .R files in the readings for this week. From now on, we'll mostly be using Quarto files for our assignments (including your project deliverables).
+
+### 2. Readings
+
+Next week we will start getting into designing conjoint surveys for our projects. We will implement them using [formr.org](https://formr.org/), which is an R-based platform for designing surveys. The platform allows you to use R or markdown code (just like you would in a .Rmd file) to define everything you see in an online survey. All survey elements are defined using Google Sheets.
+
+To get familiar with the platform, go to **[this post](https://www.jhelvy.com/talks/2021-01-21-surveys-with-formr/)** on my website and watch the ~45 min video on the page. It is a recording of me introducing formr.org at a [GW Coders](https://gwcoders.github.io/) community meet up back in 2021. The first 5 minutes is a high level introduction, and the rest of the video goes into a detailed demo of the platform.
+
+**Take notes** as you watch the video.
+
+At the bottom of the page in the section titled "Surveys with {formr}", you can see links to the actual surveys I used in the video.
+
+### 3. Make a practice survey
+
+Normally I would have each team create their own account on formr.org, but at the moment the site is undergoing several upgrades and they have temporarily suspended new accounts. So, the work around for this semester will be for every team to use the same account. I will post the log in information on the class [Slack]({{< var slack >}}){target="_blank"} in the #projects channel.
+
+For practice, try replicating the [random images](https://docs.google.com/spreadsheets/d/1hs551J6PYJNxc4sftmJyUqj6XYGYFVnN_5faQBWY7cs/edit?usp=sharing) survey I demonstrated in the video. Follow these steps:
+
+1. Make a copy of the survey Google Sheet in GW Google Drive account. **Make sure you turn the share settings on so that anyone can view it** (if you don't, formr won't be able to read it in).
+2. Log in to formr.org and create a new survey using that Google Sheet. Name your survey `practice_netID`, replacing `netID` with your `netID` (e.g. `practice_jph`).
+3. Once you have your survey uploaded, you can make it live by creating a "Run". Create a new run, and give it the same name as your survey name. Add your survey to the run by clicking on the `r fa("square-pen")` icon, then add a stopping point by clicking the `r fa("stop")` icon.
+4. The link to the survey will be `https://your_run_name.formr.org`. You can control whether your survey is "live" or not by modifying the "volume" icons. I recommend setting it to the `r fa("volume-low")` icon, which means people who have the link can access the survey.
+5. Try it out! See if the survey works as expected. You can also click through a few times and then see the response data by going to your survey (not the run) in the formr.org admin page.
+
+### 4. Reflect
+
+Reflect on what you've learned while going through these readings and exercises. Is there anything that jumped out at you? Anything you found particularly interesting or confusing? Write at least a paragraph in your ``r hw_file`` file, and include at least one question. The teaching team will review the questions we get and will try to answer them either in Slack or in class.
+
+If you're unsure where to start with a reflection, try filling out this template:
+
+> "I used to think ______, now I think ______ 🤔"
+
+### 5. Submit
+
+To submit your assignment, follow these instructions:
+
+1. Render your .qmd file by either clicking the "Render" button in RStudio or running the command ``r paste0('quarto::quarto_render("', hw_file, '")')`` command.
+2. Open the rendered html file and make sure it looks good! Is all the formatting as you expected?
+3. Create a zip file of all the files in your R project folder for this assignment and submit it on the corresponding assignment submission on Blackboard.
